--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^10.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-native-vector-icons": "^8.0.0",
     "react-router-dom": "^5.2.0",
     "react-scripts": "3.4.1"
   },
