--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "lint": "eslint --no-inline-config --no-error-on-unmatched-pattern -c .eslintrc.json .",
+    "lint": "eslint --no-inline-config  --fix --no-error-on-unmatched-pattern -c .eslintrc.json .",
     "lint:styles": "npx stylelint '**/*.css'"
   },
   "browserslist": {
