--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,24 +10,21 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-node@v1.4.4
         with:
-          node-version: '12'
+          node-version: "12"
       - name: Stylelint code analysis step
         uses: betrybe/stylelint-linter-action@v1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-      - uses: actions/setup-node@v1.4.4
-        with:
-          node-version: '12'
       - name: ESLint code analysis step
         uses: betrybe/eslint-linter-action@v2.1
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
       - name: Evaluator step
         id: evaluator
-        uses: betrybe/react-scripts-evaluator-action@v5
+        uses: betrybe/react-scripts-evaluator-action@v4
         with:
-          repository-test-name: 'betrybe/sd-0x-project-frontend-online-store-tests'
-          repository-test-branch: 'master'
+          repository-test-name: "betrybe/sd-0x-project-frontend-online-store-tests"
+          repository-test-branch: "master"
       - name: Store evaluation step
         uses: betrybe/store-evaluation-action@v2
         with:
