--- a/package.json
+++ b/package.json
@@ -36,12 +36,15 @@
     "stylelint-order": "^4.1.0"
   },
   "dependencies": {
+    "@reduxjs/toolkit": "1.5.0",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.4",
     "@testing-library/user-event": "^10.1.0",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "^3.4.4"
+    "react-scripts": "^3.4.4",
+    "redux": "4.0.5"
   }
 }
