--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-sonarjs": "^0.5.0",
+    "gulp": "4.0.2",
     "prettier": "2.2.1",
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0",
