--- a/package.json
+++ b/package.json
@@ -31,7 +31,10 @@
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-sonarjs": "^0.5.0",
     "gulp": "4.0.2",
+    "gulp-postcss": "9.0.0",
     "gulp-stylelint": "13.0.0",
+    "postcss": "8.2.4",
+    "postcss-sorting": "6.0.0",
     "prettier": "2.2.1",
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0",
