--- a/package.json
+++ b/package.json
@@ -3,16 +3,26 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^5.15.2",
     "@testing-library/jest-dom": "^5.5.0",
     "@testing-library/react": "^10.0.4",
     "@testing-library/user-event": "^10.1.0",
+    "apollo-boost": "^0.4.9",
+    "axios": "^0.21.1",
+    "bootstrap": "^4.6.0",
+    "graphql": "^15.5.0",
     "react": "^16.13.1",
+    "react-apollo": "^3.1.5",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.2",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "3.4.1",
+    "redux": "^4.0.5"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start": "npm-run-all --parallel reactstart webservice",
+    "reactstart": "react-scripts start",
+    "webservice": "node server.js",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -33,12 +43,21 @@
   },
   "devDependencies": {
     "@sheerun/mutationobserver-shim": "^0.3.3",
+    "chokidar": "^3.5.1",
+    "connect-history-api-fallback": "^1.6.0",
+    "cors": "^2.8.5",
     "eslint": "6.8.0",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-plugin-import": "^2.20.2",
     "eslint-plugin-jsx-a11y": "^6.2.3",
     "eslint-plugin-react": "^7.19.0",
     "eslint-plugin-sonarjs": "^0.5.0",
+    "express": "^4.17.1",
+    "express-graphql": "^0.12.0",
+    "faker": "^5.3.1",
+    "json-server": "^0.16.3",
+    "jsonwebtoken": "^8.5.1",
+    "npm-run-all": "^4.1.5",
     "stylelint": "^13.8.0",
     "stylelint-config-standard": "^20.0.0",
     "stylelint-order": "^4.1.0"
